# cargo-metadata-pathologies

./: LICENSE  README.md
binary-deps/: Cargo.toml  README.md
platform-specific-features/: Cargo.toml  README.md
