[package]
name = "platform-specific-features"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu.dependencies]
serde = { version = "1" }

[target.x86_64-apple-darwin.dependencies]
serde = { version = "1", features = ["derive"] }
